syntax = "proto3";

option go_package = "github.com/S3B4SZ17/Web_Algo/proto";

service AddTwoNumbers {
    rpc AddTwoNumbers (ListReq) returns (ListSum) {}
}

message ListReq {
    repeated int32 listVal1 = 1 [packed=true]; // repeated is for arrays
    repeated int32 listVal2 = 2 [packed=true]; // repeated is for arrays
}

message ListSum {
    string list1 = 1;
    string list2 = 2;
    string sum = 3;
}